--- a/style.css
+++ b/style.css
@@ -3,21 +3,25 @@ html{
     margin: 0;
     height: 100%;
     width: 100%;
-    background-color: rgb(240, 210, 210);
+    /*background-color: rgb(240, 210, 210);*/
+    background-color: #D0AFC7;
 }
+
 
 @media only screen and (max-width: 600px) {
     body {
         font-size: 16px;
         font-family: tahoma, verdana, segoe, sans-serif;
         color: black;
-        background-color: rgb(240, 210, 210);
+        /*background-color: rgb(240, 210, 210);*/
+        background-color: #D0AFC7;
     }
 }
 nav{
     width: 100%;
     height: 120px;
-    background-color: rgb(220, 190, 190);
+    /*background-color: rgb(220, 190, 190);*/
+    background-color: #B596AC;
     display: flex;
     justify-content: space-evenly;
 }
@@ -31,13 +35,19 @@ nav a{
 }
 
 nav a:hover{
-    background-color: rgb(230, 200, 200);
+    /*background-color: rgb(230, 200, 200);*/
+    background-color: #D0AFC7;
 }
 
 header{
-    background-color: rgb(240, 210, 210);
-    height: 100px;
-    padding-top: 50px;
+    /*background-color: rgb(240, 210, 210);*/
+    background-color: #D0AFC7;
+    background-image: url("includes/pinkyHeader.jpeg");
+    height: 300px;
+    /*padding-top: 50px;*/
+    /*margin-bottom: 40px;*/
+    /*margin-top: 20px;*/
+    margin: 20px 10% 40px 10%;
     font-size: 3em;
     font-weight: bold;
     text-align: center;
@@ -45,11 +55,13 @@ header{
 
 main{
     width: 100%;
-    background-color: rgb(240, 210, 210);
+    /*background-color: rgb(240, 210, 210);*/
+    background-color: #D0AFC7;
 }
 
 .container{
-    background-color: rgb(255, 230, 230);
+    /*background-color: rgb(255, 230, 230);*/
+    background-color: #EED4E8;
     padding: 50px;
     margin: 0 10% 30px 10%;
 }
@@ -87,10 +99,15 @@ p{
     margin: 30px auto 30px auto;
 }
 
+.video{
+    text-align: center;
+}
+
 footer{
     width: 100%;
     height: 80px;
-    background-color: rgb(220, 190, 190);
+    /*background-color: rgb(220, 190, 190);*/
+    background-color: #B596AC;
     text-align: center;
     padding-top: 15px;
     font-size: 1em;
