--- a/css/style.css
+++ b/css/style.css
@@ -42,15 +42,16 @@ nav a:hover{
 header{
     /*background-color: rgb(240, 210, 210);*/
     background-color: #D0AFC7;
-    background-image: url("includes/pinkyHeader.jpeg");
-    height: 300px;
-    /*padding-top: 50px;*/
+    background-image: url("../includes/pinkyHeader.jpeg");
+    height: 200px;
+    padding-top: 100px;
     /*margin-bottom: 40px;*/
     /*margin-top: 20px;*/
     margin: 20px 10% 40px 10%;
-    font-size: 3em;
+    font-size: 4em;
     font-weight: bold;
     text-align: center;
+    color: white;
 }
 
 main{
